# CISC878-Project

./: CISC 878 Project Presentation - Matthew Richard.pptx  README.md
bulletproofs/: Cargo.toml
bulletproofs/src/: main.rs  vote_proof.rs  vote_submission.rs  voter_registration.rs
snarks/: Cargo.toml
snarks/src/: circuit.rs  main.rs  vote_proof.rs  vote_submission.rs  voter_registration.rs
