[package]
name = "snarks"
version = "0.1.0"
edition = "2021"

# add dependencies
[dependencies]

# arkworks dependencies
ark-bls12-381 = { version = "0.4.0", features = ["curve"] }
ark-groth16 = "0.4.0"
ark-ff = "0.4.0"
ark-std = "0.4.0"
ark-serialize = "0.4.0"
ark-relations = "0.4.0"
ark-poly = "0.4.0"
ark-snark = "0.4.0"
sha3 = "0.10.8"
rand = "0.8.5"
rand_core = "0.6.4"
memory-stats = "1.0.0"
bincode = "1.3.3" 
